# benchmark-async-vs-sync

./: Cargo.toml  README.md
benches/: hft_benchmark.rs
hft_benchmark_report/: benchmark_analysis.txt  benchmark_report.md  benchmark_results.csv
src/: lib.rs  main.rs  plotter.rs  simple_plotter.rs
